syntax = "proto3";

option go_package = "./pb";

message LocationMetadata {
    double latitude = 1;
    double longitude = 2;
    double radius = 3;
}

message DriverLocation {
    string name = 1;
    double latitude = 2;
    double longitude = 3;
    double distance = 4;
}

message DriverLocationList {
    repeated DriverLocation locations = 1;
}

enum DriverStatus {
    UNKNOWN = 0;
    FREE = 1;
    BUSY = 2;
}

message DriverStatusMetadata {
    string name = 1;
    DriverStatus status = 2;
}

message Empty {}

service Driver {
    rpc GetClosest(LocationMetadata) returns (DriverLocationList);
    rpc GetStatus(DriverStatusMetadata) returns (DriverStatusMetadata);
    rpc SetStatus(DriverStatusMetadata) returns (Empty);
}
